styles/layout.scss
// See: https://sass-lang.com/
*, *::after, *::after {
  box-sizing: inherit;
}

body,
html {
  margin: 0;
}

html {
  box-sizing: border-box;
  font-size: 100%;
}

// Ensures all maps stay inside their containers!!
.map-container {
  position: relative;
  height: 100%;
  width: 100%;
}

/**********************
* Single Column Pages *
**********************/

section.maps {
  margin-top: 120px;
}

.map-card {
  margin: 0 auto;
  margin-bottom: 4em;
}

/*******************
* Two Column Pages *
*******************/
// Any sticky elements to left of the page
.grid {
  display: grid;
  grid-template-columns: 2fr 5fr;

  .sticky {
    display: flex;
    align-items: center;
    margin: 0 auto;
    height: 100vh;
    position: sticky;
    top: 0;
    z-index: 1;
  }

  .map-card {
    margin-bottom: 2em;
  }
}

/************
* Home Page *
*************/
.small-maps-container {
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  width: 90vw;
}


/**************
* Create Form *
**************/

.create-form-container {
  max-width: 70vw;
  margin: 0 auto;
  margin-top: 15vh;
}

/**************
* Create Form *
**************/

